; ModuleID = '/home/carl/AnghaBench/netdata/web/api/queries/incremental_sum/extr_incremental_sum.c_grouping_add_incremental_sum.c'
source_filename = "/home/carl/AnghaBench/netdata/web/api/queries/incremental_sum/extr_incremental_sum.c_grouping_add_incremental_sum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }
%struct.grouping_incremental_sum = type { i32, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @grouping_add_incremental_sum(%struct.TYPE_5__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.grouping_incremental_sum*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @isnan(i8* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %40, label %9

9:                                                ; preds = %2
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = inttoptr i64 %13 to %struct.grouping_incremental_sum*
  store %struct.grouping_incremental_sum* %14, %struct.grouping_incremental_sum** %5, align 8
  %15 = load %struct.grouping_incremental_sum*, %struct.grouping_incremental_sum** %5, align 8
  %16 = getelementptr inbounds %struct.grouping_incremental_sum, %struct.grouping_incremental_sum* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp ne i32 %17, 0
  %19 = xor i1 %18, true
  %20 = zext i1 %19 to i32
  %21 = call i64 @unlikely(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %31

23:                                               ; preds = %9
  %24 = load i8*, i8** %4, align 8
  %25 = load %struct.grouping_incremental_sum*, %struct.grouping_incremental_sum** %5, align 8
  %26 = getelementptr inbounds %struct.grouping_incremental_sum, %struct.grouping_incremental_sum* %25, i32 0, i32 2
  store i8* %24, i8** %26, align 8
  %27 = load %struct.grouping_incremental_sum*, %struct.grouping_incremental_sum** %5, align 8
  %28 = getelementptr inbounds %struct.grouping_incremental_sum, %struct.grouping_incremental_sum* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %28, align 8
  br label %39

31:                                               ; preds = %9
  %32 = load i8*, i8** %4, align 8
  %33 = load %struct.grouping_incremental_sum*, %struct.grouping_incremental_sum** %5, align 8
  %34 = getelementptr inbounds %struct.grouping_incremental_sum, %struct.grouping_incremental_sum* %33, i32 0, i32 1
  store i8* %32, i8** %34, align 8
  %35 = load %struct.grouping_incremental_sum*, %struct.grouping_incremental_sum** %5, align 8
  %36 = getelementptr inbounds %struct.grouping_incremental_sum, %struct.grouping_incremental_sum* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %36, align 8
  br label %39

39:                                               ; preds = %31, %23
  br label %40

40:                                               ; preds = %39, %2
  ret void
}

declare dso_local i32 @isnan(i8*) #1

declare dso_local i64 @unlikely(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
